configs/firewall.conf
# Generated by iptables-save v1.4.5 on Fri Dec 11 17:49:58 2009
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DYNDROP - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT ! -d 172.17.177.160/32 -i wlan0 -j DROP 
-A INPUT -m u32 --u32 "0 & 0x0F000000 = 0x05:0x0F" -j DYNDROP
-A INPUT -m ttl --ttl-lt 20 -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,URG SYN,URG -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DYNDROP 
-A INPUT -s 172.17.177.129/32 -p udp -m ttl --ttl-eq 64 -m udp --sport 1900 -j ACCEPT 
-A INPUT -m conntrack --ctstate INVALID -j DYNDROP 
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 153.19.42.16/32 -p tcp -m tcp --dport 4443 -j ACCEPT 
-A INPUT -s 172.17.177.161/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 57777 -j ACCEPT 
-A INPUT -p udp -m conntrack --ctstate NEW -m udp --dport 57777 -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate NEW -m multiport --dports 55348:55357 -j ACCEPT 
-A INPUT -p udp -m conntrack --ctstate NEW -m multiport --dports 55348:55357 -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags SYN SYN -j DYNDROP 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A DYNDROP -m limit --limit 5/min -j LOG 
-A DYNDROP -j DROP 
COMMIT
# Completed on Fri Dec 11 17:49:58 2009
