configs/firewall6.conf
# Generated by ip6tables-save v1.4.10 on Sat Apr 30 08:54:45 2011
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [2:152]
:DYNDROP - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m comment --comment "router advertisement" -j ACCEPT 
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m comment --comment "neighbor solicitation" -j ACCEPT 
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m comment --comment "neighbor advertisement" -j ACCEPT 
-A INPUT -m hl --hl-lt 5 -j DYNDROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -m comment --comment "tcp-flags FIN,RST FIN,RST" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -m comment --comment "tcp-flags SYN,RST SYN,RST" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -m comment --comment "tcp-flags FIN,SYN FIN,SYN" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags SYN,URG SYN,URG -m comment --comment "tcp-flags SYN,URG SYN,URG" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m comment --comment "tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE" -j DYNDROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -m comment --comment "tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG" -j DYNDROP 
-A INPUT -m conntrack --ctstate INVALID -j DYNDROP 
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --tcp-flags SYN SYN -m comment --comment "tcp-flags SYN SYN" -j DYNDROP 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p ipv6-icmp -m icmp6 --icmpv6-type 133 -m comment --comment "router solicitation" -j ACCEPT 
-A OUTPUT -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m comment --comment "neighbor solicitation" -j ACCEPT 
-A OUTPUT -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m comment --comment "neighbor advertisement" -j ACCEPT 
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT 
-A DYNDROP -m limit --limit 5/min -j LOG --log-tcp-sequence --log-tcp-options --log-ip-options --log-uid 
-A DYNDROP -j DROP 
COMMIT
# Completed on Sat Apr 30 08:54:45 2011
# Generated by ip6tables-save v1.4.10 on Sat Apr 30 08:54:45 2011
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sat Apr 30 08:54:45 2011
